1986 bug video recording not working as expected in junit (#1999)
* allow junit extensions autodetection

* set last known test status (defaults to true)

* get last known test method display name

* include dependencies for monte/junit5

* enable video logger and configure video.save.mode

* enhance getTestMethodName() and isCurrentTestPassed() to support junit

* fixing screenshot atomic array

- should fix animated gif and screenshots for failed actions

* code linting

* attach video recording and animated gif afterInvocation for junit tests

* changing video default directory to target/video + code linting